src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Earliest_Product_Download_Act_Date__c</fullName>
        <formula>IF(AND(ISBLANK(Earliest_Free_Download_Activation_Date__c), 
ISBLANK(Earliest_Full_Download_Activation_Date__c)),NULL, 
NOW()- 
MAX( 
NOW()-IF(ISBLANK(Earliest_Free_Download_Activation_Date__c),NOW(),Earliest_Free_Download_Activation_Date__c), 
NOW()-IF(ISBLANK(Earliest_Full_Download_Activation_Date__c),NOW(),Earliest_Full_Download_Activation_Date__c)))</formula>
        <label>Earliest Product Download/Act Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Bounce__c</fullName>
        <label>Email Bounce</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Domain__c</fullName>
        <description>Formula to split out the email domain from a contact&apos;s email address for Gainsight Matching</description>
        <formula>SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Frequency__c</fullName>
        <description>Sets the frequency of company emails this lead will receive. A workflow rule makes changes to this field.</description>
        <inlineHelpText>Sets the frequency of company emails this lead will receive.</inlineHelpText>
        <label>Email Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Once Monthly</fullName>
                </value>
                <value>
                    <fullName>Once Quarterly</fullName>
                </value>
                <value>
                    <fullName>Product Announcements Only</fullName>
                </value>
                <value>
                    <fullName>Bounced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engaged_GC_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engaged GC User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_PowerDialer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A self-managed checkbox to exclude the contact from the PowerDialer list.</description>
        <label>Exclude from PowerDialer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Connect_Date__c</fullName>
        <label>First Connect Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Conversation_Date__c</fullName>
        <label>First Conversation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Demo_Date__c</fullName>
        <label>First Demo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Demo_Scheduled_Date__c</fullName>
        <description>The created date for the first demo completed on the contact</description>
        <label>First Demo Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Dial_Date__c</fullName>
        <label>First Dial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Free_Version_Activation_Date__c</fullName>
        <label>First Free Version Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Free_Version_Download_Date__c</fullName>
        <label>First Free Version Download Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Full_Version_Activation_Date__c</fullName>
        <label>First Full Version Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Full_Version_Download_Date__c</fullName>
        <label>First Full Version Download Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Sendbloom_Campaign_ID__c</fullName>
        <label>First Sendbloom Campaign ID</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Sendbloom_Campaign_Type__c</fullName>
        <label>First Sendbloom Campaign Type</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Sendbloom_Campaign__c</fullName>
        <label>First Sendbloom Campaign</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_WP_Download_Asset_Name__c</fullName>
        <description>Name of the whitepaper this lead downloaded initially. Field was created in April 2014, so will be blank for downloads that occurred before then.</description>
        <inlineHelpText>Name of the whitepaper this lead downloaded initially</inlineHelpText>
        <label>First WP Download Asset Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Web_Form_Fill_Date_No_Time__c</fullName>
        <formula>DATEVALUE(First_Web_Form_Fill_Date__c)</formula>
        <label>First Web Form Fill Date (No Time)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Web_Form_Fill_Date__c</fullName>
        <label>First Web Form Fill Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Web_Form_Fill__c</fullName>
        <label>First Web Form Fill</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Download</fullName>
                </value>
                <value>
                    <fullName>Full Activation</fullName>
                </value>
                <value>
                    <fullName>Free Download</fullName>
                </value>
                <value>
                    <fullName>Free Activation</fullName>
                </value>
                <value>
                    <fullName>WP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to move the contact to the top of the contact view. The contact will still disappear from the view if it has been called recently, but will reappear after a certain number of days.</inlineHelpText>
        <label>Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Focus_Account__c</fullName>
        <formula>Account.Focus_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Focus Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName&amp;&quot; &quot;&amp;LastName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greatest_Pain__c</fullName>
        <description>for Corey 3PT</description>
        <label>Greatest Pain</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assuring Application Performance</fullName>
                </value>
                <value>
                    <fullName>Reducing Licensing Costs</fullName>
                </value>
                <value>
                    <fullName>Capacity Planning</fullName>
                </value>
                <value>
                    <fullName>VDI Deployments</fullName>
                </value>
                <value>
                    <fullName>Hybrid Cloud Management</fullName>
                </value>
                <value>
                    <fullName>Deploying OpenStack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Green_Circle_Community_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of points this particular contact has in the Green Circle Community</description>
        <label>Green Circle Community Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Green_Circle_Member__c</fullName>
        <formula>IF(NOT(ISBLANK(Green_Circle_Reg_Date__c)),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Green Circle Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Green_Circle_Reg_Date__c</fullName>
        <label>Green Circle Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Green_Circle_Registration_Date__c</fullName>
        <label>Green Circle Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Green_Circle_Username__c</fullName>
        <label>Green Circle Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfContent_cont__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For EU GDPR Requirements</description>
        <label>Content Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfEvents_cont__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For EU GDPR Requirements</description>
        <label>Event Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfNews_cont__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For EU GDPR Requirements</description>
        <label>News Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfProductUpdates_cont__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For EU GDPR Requirements</description>
        <label>Product Update Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Value_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked means lead will not receive generic marketing emails. Lead will still receive ~quarterly company announcements such as product releases. To opt out of all emails, use &quot;Email Opt Out&quot;</description>
        <label>High Value Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Host_Count__c</fullName>
        <label>Host Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hypervisors_in_use__c</fullName>
        <inlineHelpText>Which of the following hypervisor(s) does the organization use?</inlineHelpText>
        <label>Hypervisor(s) in Use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VMware</fullName>
                </value>
                <value>
                    <fullName>Hyper-V (Microsoft)</fullName>
                </value>
                <value>
                    <fullName>Xen (Open Source)</fullName>
                </value>
                <value>
                    <fullName>Xen (Citrix)</fullName>
                </value>
                <value>
                    <fullName>KVM (Redhat)</fullName>
                </value>
                <value>
                    <fullName>OracleVM</fullName>
                </value>
                <value>
                    <fullName>Heterogenous</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inactive_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inactive Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inactive Contacts</relationshipLabel>
        <relationshipName>Inactive_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inbound_Lead__c</fullName>
        <formula>IF(OR(ISPICKVAL(LeadSource, &apos;Inbound - Product Download&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Other&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Webinar&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Website&apos;),ISPICKVAL(LeadSource, &apos;Tradeshow&apos;),ISPICKVAL(LeadSource, &apos;Third Party&apos;),ISPICKVAL(LeadSource, &apos;Inbound - WP/E-Book&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Sweepstakes Entry&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Contact Us&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Webcast&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Event Registration&apos;)),TRUE,FALSE)</formula>
        <label>Inbound Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inbound_SLA_Core_Market__c</fullName>
        <description>For use in filtering Core Market contacts for Inbound SLAs (CampaignMemberCreateSLA.trigger)</description>
        <formula>IF(ISBLANK(Account.Name),
CASE(UPPER(MailingCountry), 
&quot;UNITED KINGDOM&quot;,&quot;EMEA&quot;, 
&quot;SPAIN&quot;, &quot;EMEA&quot;, 
&quot;PORTUGAL&quot;, &quot;EMEA&quot;, 
&quot;FRANCE&quot;, &quot;EMEA&quot;, 
&quot;ICELAND&quot;,&quot;EMEA&quot;, 
&quot;GREAT BRITAIN&quot;,&quot;EMEA&quot;, 
&quot;GERMANY&quot;,&quot;EMEA&quot;, 
&quot;BELGIUM&quot;,&quot;EMEA&quot;, 
&quot;EUROPE&quot;,&quot;EMEA&quot;, 
&quot;POLAND&quot;,&quot;EMEA&quot;, 
&quot;THE NETHERLANDS&quot;,&quot;EMEA&quot;, 
&quot;NETHERLANDS&quot;,&quot;EMEA&quot;, 
&quot;NEDERLANDS&quot;,&quot;EMEA&quot;, 
&quot;LUXEMBOURG&quot;,&quot;EMEA&quot;, 
&quot;SWITZERLAND&quot;,&quot;EMEA&quot;, 
&quot;AUSTRIA&quot;,&quot;EMEA&quot;, 
&quot;IRELAND&quot;,&quot;EMEA&quot;, 
&quot;ITALY&quot;,&quot;EMEA&quot;, 
&quot;DENMARK&quot;,&quot;EMEA&quot;, 
&quot;FINLAND&quot;,&quot;EMEA&quot;, 
&quot;SWEDEN&quot;,&quot;EMEA&quot;, 
&quot;NORWAY&quot;,&quot;EMEA&quot;, 
&quot;POLAND&quot;,&quot;EMEA&quot;, 
&quot;SOUTH AFRICA&quot;,&quot;EMEA&quot;, 
&quot;ISRAEL&quot;,&quot;EMEA&quot;, 
&quot;SCOTLAND&quot;,&quot;EMEA&quot;, 
&quot;UNITED STATES&quot;,&quot;NORAM&quot;, 
&quot;CANADA&quot;,&quot;NORAM&quot;, 
&quot;N/A&quot;), 
IF(CONTAINS(&quot;EMEA&quot;, Account.Territory_Owner_Team__c),&quot;EMEA&quot;,&quot;NORAM&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inbound SLA Core Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_in_contact_view__c</fullName>
        <formula>IF(AND(OR(NOT(ISBLANK(Latest_Web_Form_Fill_Date__c)),LEFT(TEXT(LeadSource),4)=&quot;TSE:&quot;,LEFT(TEXT(LeadSource),4)=&quot;3PT:&quot;),OR(Dial_Count__c=0,Latest_Web_Form_Fill_Date_Adj_For_Blanks__c&gt;Last_Dial_Date_adj_for_blanks__c),TEXT(Contact_Status__c)=&quot;Actively Prospecting&quot;),&quot;Include&quot;,

IF(OR(Open_Task__c=TRUE,
OR(TEXT(Contact_Status__c)&lt;&gt;&quot;Actively Prospecting&quot;,TEXT(Contact_Status__c)=&quot;&quot;),
NOT(ISBLANK(Callback_Date__c)),
AND(NOT(ISBLANK(Last_Dial_Date__c)),TODAY()-Last_Dial_Date__c&lt;3)),&quot;Exclude&quot;,

IF(OR(Flag__c=TRUE,NOT(ISBLANK(Latest_Web_Form_Fill_Date__c))),&quot;Include&quot;,

IF(AND(Account.Opps_Identify_Plus__c=0, 
OR(TEXT(Account.Rating)=&quot;Untouched&quot;,TEXT(Account.Rating)=&quot;Cold&quot;)),&quot;Include&quot;,&quot;Exclude&quot;))))</formula>
        <label>Include in contact view?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_clean__c</fullName>
        <formula>Account.Industry_clean__c</formula>
        <label>Industry (clean)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intended_Sales_Engineer__c</fullName>
        <formula>Account.Intended_Sales_Engineer__c</formula>
        <label>Intended Sales Engineer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Involved_in_Tech_Purchasing_Decisions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for Corey 3PT</description>
        <label>Involved in Tech Purchasing Decisions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Connect_Date__c</fullName>
        <label>Last Connect Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Conversation_Date__c</fullName>
        <label>Last Conversation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_Added_to_Email_Nurture_Program__c</fullName>
        <label>Last Date Added to Email Nurture Program</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Dial_Date__c</fullName>
        <label>Last Dial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Dial_Date_adj_for_blanks__c</fullName>
        <formula>IF(ISBLANK(Last_Dial_Date__c),DATE(1900,1,1),Last_Dial_Date__c)</formula>
        <label>Last Dial Date (adj for blanks)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Email_Date__c</fullName>
        <label>Last Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Engagement_Date__c</fullName>
        <label>Last Engagement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Outcome_Date__c</fullName>
        <label>Last Outcome Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Search_Date__c</fullName>
        <label>Last Search Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Concierge_Download_Date_Time__c</fullName>
        <label>Latest Concierge Download Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Sendbloom_Campaign_ID__c</fullName>
        <label>Latest Sendbloom Campaign ID</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Sendbloom_Campaign_Type__c</fullName>
        <label>Latest Sendbloom Campaign Type</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Sendbloom_Campaign__c</fullName>
        <label>Latest Sendbloom Campaign</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Sendbloom_Touch__c</fullName>
        <label>Latest Sendbloom Touch</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_WP_Download_Asset_Name__c</fullName>
        <label>Latest WP Download Asset Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Web_Form_Fill_Date_Adj_For_Blanks__c</fullName>
        <formula>IF(ISBLANK(Latest_Web_Form_Fill_Date__c),DATE(1900,1,1),DATEVALUE(Latest_Web_Form_Fill_Date__c))</formula>
        <label>Latest Web Form Fill Date Adj For Blanks</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Web_Form_Fill_Date__c</fullName>
        <label>Latest Web Form Fill Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Web_Form_Fill_Stamp__c</fullName>
        <label>Latest Web Form Fill Stamp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Web_Form_Fill__c</fullName>
        <label>Latest Web Form Fill</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_APAC__c</fullName>
        <formula>CASE(UPPER(MailingCountry), 
&quot;CHINA&quot;,&quot;Y&quot;, 
&quot;JAPAN&quot;,&quot;Y&quot;, 
&quot;AUSTRALIA&quot;,&quot;Y&quot;, 
&quot;NEW ZEALAND&quot;,&quot;Y&quot;, 
&quot;PHILIPPINES&quot;,&quot;Y&quot;, 
&quot;RUSSIAN FEDERATION&quot;,&quot;Y&quot;, 
&quot;THAILAND&quot;,&quot;Y&quot;, 
&quot;VIETNAM&quot;,&quot;Y&quot;, 
&quot;INDIA&quot;,&quot;Y&quot;, 
&quot;SOUTH KOREA&quot;,&quot;Y&quot;, 
&quot;KOREA&quot;,&quot;Y&quot;, 
&quot;UKRAINE&quot;,&quot;Y&quot;, 
&quot;INDONESIA&quot;,&quot;Y&quot;, 
&quot;SINGAPORE&quot;,&quot;Y&quot;, 
&quot;TAIWAN&quot;,&quot;Y&quot;, 
&quot;BANGLADESH&quot;,&quot;Y&quot;, 
&quot;HONG KONG&quot;,&quot;Y&quot;, 
&quot;N&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Assign (APAC)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_Central__c</fullName>
        <formula>CASE(UPPER(MailingState), 
&quot;OH&quot;,&quot;Y&quot;, 
&quot;IL&quot;,&quot;Y&quot;, 
&quot;IN&quot;,&quot;Y&quot;, 
&quot;MO&quot;,&quot;Y&quot;, 
&quot;IA&quot;,&quot;Y&quot;, 
&quot;NC&quot;,&quot;Y&quot;, 
&quot;TN&quot;,&quot;Y&quot;, 
&quot;KY&quot;,&quot;Y&quot;, 
&quot;OHIO&quot;,&quot;Y&quot;, 
&quot;ILLINOIS&quot;,&quot;Y&quot;, 
&quot;INDIANA&quot;,&quot;Y&quot;, 
&quot;MISSOURI&quot;,&quot;Y&quot;, 
&quot;IOWA&quot;,&quot;Y&quot;, 
&quot;NORTH CAROLINA&quot;,&quot;Y&quot;, 
&quot;TENNESSEE&quot;,&quot;Y&quot;, 
&quot;KENTUCKY&quot;,&quot;Y&quot;,
&quot;AL&quot;,&quot;Y&quot;, 
&quot;AR&quot;,&quot;Y&quot;, 
&quot;DE&quot;,&quot;Y&quot;, 
&quot;DC&quot;,&quot;Y&quot;, 
&quot;FL&quot;,&quot;Y&quot;, 
&quot;GA&quot;,&quot;Y&quot;, 
&quot;LA&quot;,&quot;Y&quot;, 
&quot;MS&quot;,&quot;Y&quot;, 
&quot;PR&quot;,&quot;Y&quot;, 
&quot;SC&quot;,&quot;Y&quot;, 
&quot;VA&quot;,&quot;Y&quot;, 
&quot;WV&quot;,&quot;Y&quot;, 
&quot;ALABAMA&quot;,&quot;Y&quot;, 
&quot;ARKANSAS&quot;,&quot;Y&quot;, 
&quot;DELAWARE&quot;,&quot;Y&quot;, 
&quot;DISTRICT OF COLUMBIA&quot;,&quot;Y&quot;, 
&quot;FLORIDA&quot;,&quot;Y&quot;, 
&quot;GEORGIA&quot;,&quot;Y&quot;, 
&quot;LOUISIANA&quot;,&quot;Y&quot;, 
&quot;MISSISSIPPI&quot;,&quot;Y&quot;, 
&quot;PUERTO RICO&quot;,&quot;Y&quot;, 
&quot;SOUTH CAROLINA&quot;,&quot;Y&quot;, 
&quot;VIRGINIA&quot;,&quot;Y&quot;, 
&quot;WEST VIRGINIA&quot;,&quot;Y&quot;, 
&quot;N&quot;)</formula>
        <label>Lead Assign (Central)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_East__c</fullName>
        <formula>CASE(UPPER(MailingState), 
&quot;NY&quot;,&quot;Y&quot;, 
&quot;NJ&quot;,&quot;Y&quot;, 
&quot;MA&quot;,&quot;Y&quot;, 
&quot;RI&quot;,&quot;Y&quot;, 
&quot;CT&quot;,&quot;Y&quot;, 
&quot;NEW YORK&quot;,&quot;Y&quot;, 
&quot;NEW JERSEY&quot;,&quot;Y&quot;, 
&quot;MASSACHUSETTS&quot;,&quot;Y&quot;, 
&quot;RHODE ISLAND&quot;,&quot;Y&quot;, 
&quot;CONNECTICUT&quot;,&quot;Y&quot;,
&quot;ON&quot;,&quot;Y&quot;, 
&quot;MI&quot;,&quot;Y&quot;, 
&quot;MN&quot;,&quot;Y&quot;, 
&quot;WI&quot;,&quot;Y&quot;, 
&quot;MD&quot;,&quot;Y&quot;, 
&quot;PA&quot;,&quot;Y&quot;, 
&quot;NH&quot;,&quot;Y&quot;, 
&quot;ME&quot;,&quot;Y&quot;, 
&quot;VT&quot;,&quot;Y&quot;, 
&quot;NB&quot;,&quot;Y&quot;, 
&quot;NS&quot;,&quot;Y&quot;, 
&quot;NF&quot;,&quot;Y&quot;, 
&quot;PE&quot;,&quot;Y&quot;, 
&quot;QC&quot;,&quot;Y&quot;, 
&quot;ONTARIO&quot;,&quot;Y&quot;, 
&quot;MICHIGAN&quot;,&quot;Y&quot;, 
&quot;MINNESOTA&quot;,&quot;Y&quot;, 
&quot;WISCONSIN&quot;,&quot;Y&quot;, 
&quot;NEW HAMPSHIRE&quot;,&quot;Y&quot;, 
&quot;MAINE&quot;,&quot;Y&quot;, 
&quot;VERMONT&quot;,&quot;Y&quot;, 
&quot;NEW BRUNSWICK&quot;,&quot;Y&quot;, 
&quot;NOVA SCOTIA&quot;,&quot;Y&quot;, 
&quot;NEWFOUNDLAND&quot;,&quot;Y&quot;, 
&quot;PRINCE EDWARDS ISLAND&quot;,&quot;Y&quot;, 
&quot;QUEBEC&quot;,&quot;Y&quot;, 
&quot;PENNSYLVANIA&quot;,&quot;Y&quot;, 
&quot;MARYLAND&quot;,&quot;Y&quot;, 
&quot;N&quot;)</formula>
        <label>Lead Assign (East)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_Other_Americas__c</fullName>
        <formula>CASE(UPPER(MailingCountry), 
&quot;ARGENTINA&quot;,&quot;Y&quot;, 
&quot;BELIZE&quot;,&quot;Y&quot;, 
&quot;BOLIVIA&quot;,&quot;Y&quot;, 
&quot;BRASIL&quot;,&quot;Y&quot;, 
&quot;BRAZIL&quot;,&quot;Y&quot;, 
&quot;CHILE&quot;,&quot;Y&quot;, 
&quot;COLOMBIA&quot;,&quot;Y&quot;, 
&quot;COSTA RICA&quot;,&quot;Y&quot;, 
&quot;CUBA&quot;,&quot;Y&quot;, 
&quot;DOMINICA&quot;,&quot;Y&quot;, 
&quot;DOMINICAN REPUBLIC&quot;,&quot;Y&quot;, 
&quot;ECUADOR&quot;,&quot;Y&quot;, 
&quot;EL SALVADOR&quot;,&quot;Y&quot;, 
&quot;GUATEMALA&quot;,&quot;Y&quot;, 
&quot;GUYANA&quot;,&quot;Y&quot;, 
&quot;HAITI&quot;,&quot;Y&quot;, 
&quot;HONDURAS&quot;,&quot;Y&quot;, 
&quot;JAMAICA&quot;,&quot;Y&quot;, 
&quot;MEXICO&quot;,&quot;Y&quot;, 
&quot;NICARAGUA&quot;,&quot;Y&quot;, 
&quot;PANAMA&quot;,&quot;Y&quot;, 
&quot;PARAGUAY&quot;,&quot;Y&quot;, 
&quot;PERU&quot;,&quot;Y&quot;, 
&quot;SURINAME&quot;,&quot;Y&quot;, 
&quot;URUGUAY&quot;,&quot;Y&quot;, 
&quot;VENEZUELA&quot;,&quot;Y&quot;, 
&quot;N&quot;)</formula>
        <label>Lead Assign (Other Americas)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_RR_Region__c</fullName>
        <formula>MOD(VALUE(Contact_ID__c),3)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Assign RR Region</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_West__c</fullName>
        <formula>CASE(UPPER(MailingState), 
&quot;KANSAS&quot;,&quot;Y&quot;, 
&quot;OKLAHOMA&quot;,&quot;Y&quot;, 
&quot;NEBRASKA&quot;,&quot;Y&quot;, 
&quot;TEXAS&quot;,&quot;Y&quot;, 
&quot;COLORADO&quot;,&quot;Y&quot;, 
&quot;ARIZONA&quot;,&quot;Y&quot;, 
&quot;UTAH&quot;,&quot;Y&quot;, 
&quot;NEVADA&quot;,&quot;Y&quot;, 
&quot;NEW MEXICO&quot;,&quot;Y&quot;, 
&quot;IDAHO&quot;,&quot;Y&quot;, 
&quot;MONTANA&quot;,&quot;Y&quot;, 
&quot;WYOMING&quot;,&quot;Y&quot;,
&quot;MANITOBA&quot;,&quot;Y&quot;, 
&quot;NORTH DAKOTA&quot;,&quot;Y&quot;, 
&quot;SOUTH DAKOTA&quot;,&quot;Y&quot;, 
&quot;WASHINGTON&quot;,&quot;Y&quot;, 
&quot;OREGON&quot;,&quot;Y&quot;, 
&quot;BRITISH COLUMBIA&quot;,&quot;Y&quot;, 
&quot;ALBERTA&quot;,&quot;Y&quot;, 
&quot;HAWAII&quot;,&quot;Y&quot;, 
&quot;ALASKA&quot;,&quot;Y&quot;, 
&quot;SASKATCHEWAN&quot;,&quot;Y&quot;, 
&quot;NUNAVUT&quot;,&quot;Y&quot;, 
&quot;YUKON TERRITORY&quot;,&quot;Y&quot;, 
&quot;NORTHWEST TERRITORIES&quot;,&quot;Y&quot;, 
&quot;CALIFORNIA&quot;,&quot;Y&quot;,  
&quot;N&quot;)</formula>
        <label>Lead Assign (West)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_CreatedDate__c</fullName>
        <description>Date lead was created</description>
        <label>Lead CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Details__c</fullName>
        <label>Lead Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Gen_Source__c</fullName>
        <formula>IF(AND(OR(ISPICKVAL(LeadSource, &apos;Inbound - Product Download&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Other&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Webinar&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Website&apos;)), 
OR(bizible__Medium__r.Name = &quot;banner-ad&quot;, bizible__Medium__r.Name = &quot;cpmdisplay&quot;,bizible__Medium__r.Name = &quot;cpmdisplay&quot;,bizible__Medium__r.Name = &quot;ppcdisplay&quot;,bizible__Medium__r.Name = &quot;sponsored-email&quot;, 
AND(bizible__Medium__r.Name = &quot;CPC&quot;, LEFT(bizible__AdWords_Campaign__r.Name,3)= &quot;DNC&quot;))),&quot;Advertising&quot;, 
IF(AND(OR(ISPICKVAL(LeadSource, &apos;Inbound - Product Download&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Other&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Webinar&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Website&apos;)), 
OR(bizible__Medium__r.Name = &quot;ppcsearch&quot;, 
AND(bizible__Medium__r.Name = &quot;CPC&quot;, NOT(LEFT(bizible__AdWords_Campaign__r.Name,3)= &quot;DNC&quot;)))),&quot;Paid Search&quot;, 
IF(AND(OR(ISPICKVAL(LeadSource, &apos;Inbound - Product Download&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Other&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Webinar&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Website&apos;)),bizible__Medium__r.Name = &quot;Search&quot;),&quot;Organic&quot;, 
IF(AND(OR(ISPICKVAL(LeadSource, &apos;Inbound - Product Download&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Other&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Webinar&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Website&apos;)),bizible__Medium__r.Name = &quot;Web&quot;),&quot;Direct&quot;, 
IF(ISPICKVAL(LeadSource, &apos;Tradeshow&apos;), &quot;Tradeshow&quot;, 
IF(ISPICKVAL(LeadSource,&apos;Third Party&apos;),&quot;Third Party&quot;,  
IF(AND(OR(ISPICKVAL(LeadSource, &apos;Inbound - Product Download&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Other&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Webinar&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Website&apos;)), 
OR(bizible__Medium__r.Name = &quot;social&quot;,bizible__Medium__r.Name = &quot;twitter&quot;,bizible__Medium__r.Name = &quot;facebook&quot;)),&quot;Social&quot;,
IF(AND(OR(ISPICKVAL(LeadSource, &apos;Inbound - Product Download&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Other&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Webinar&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Website&apos;)), 
bizible__Medium__r.Name = &quot;&quot;),&quot;Inbound- No Biz&quot;,&quot;&quot;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Gen Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Nurture_opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Nurture opt-out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Referal_Name__c</fullName>
        <description>A name of the external person/entity which this lead originated from</description>
        <label>Lead Referal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Safe_ID__c</fullName>
        <description>Lead Safe ID of the lead which converted into this contact</description>
        <inlineHelpText>Lead Safe ID of the lead which converted into this contact</inlineHelpText>
        <label>Lead Safe ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Category__c</fullName>
        <formula>IF(TEXT(LeadSource)=&quot;Maintenance Renewal&quot;,&quot;Maintenance&quot;, 
CASE(LEFT(TEXT(LeadSource),4), 
&quot;CCL:&quot;, &quot;List Buy&quot;, 
&quot;CHN:&quot;, &quot;Channel&quot;, 
&quot;DIR:&quot;, &quot;Inbound Marketing&quot;, 
&quot;INB:&quot;, &quot;Inbound Marketing&quot;, 
&quot;RFL:&quot;, &quot;Referral&quot;, 
&quot;TSE:&quot;, &quot;Tradeshows &amp; Events&quot;, 
&quot;SOM:&quot;, &quot;Social Media&quot;, 
&quot;OEV:&quot;, &quot;Online Events&quot;, 
&quot;TGL:&quot;, &quot;List Buy&quot;, 
&quot;PRO:&quot;, &quot;Prospecting&quot;, 
&quot;3PT:&quot;, &quot;Third Party&quot;, 
&quot;WEB:&quot;, &quot;Inbound Marketing&quot;, 
&quot;OTH:&quot;, &quot;Other&quot;, 
&quot;UNK:&quot;, &quot;Unknown&quot;, 
&quot;RNL:&quot;, &quot;Renewal&quot;, 
&quot;BD: &quot;, &quot;Business Development&quot;, 
&quot;Unknown&quot;))</formula>
        <label>Lead Source Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_text_format__c</fullName>
        <formula>TEXT(LeadSource)</formula>
        <label>Lead Source (text format)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <formula>IF(OR(CONTAINS(LOWER(Title),&quot;chief information officer&quot;), 
CONTAINS(&quot; &quot;&amp;LOWER(Title)&amp;&quot; &quot;,&quot; cio &quot;), 
CONTAINS(&quot; &quot;&amp;LOWER(Title)&amp;&quot; &quot;,&quot; cio,&quot;),
CONTAINS(&quot; &quot;&amp;LOWER(Title)&amp;&quot; &quot;,&quot; cio.&quot;)),&quot;a. CIO&quot;,
IF(OR(CONTAINS(LOWER(Title),&quot;chief technology officer&quot;),
CONTAINS(&quot; &quot;&amp;LOWER(Title)&amp;&quot; &quot;,&quot; cto &quot;), 
CONTAINS(&quot; &quot;&amp;LOWER(Title)&amp;&quot; &quot;,&quot; cto,&quot;),
CONTAINS(&quot; &quot;&amp;LOWER(Title)&amp;&quot; &quot;,&quot; cto.&quot;)),&quot;b. CTO&quot;, 
IF(OR(CONTAINS(LOWER(Title),&quot;vice president&quot;), 
CONTAINS(&quot; &quot;&amp;LOWER(Title)&amp;&quot; &quot;,&quot; vp &quot;),
CONTAINS(&quot; &quot;&amp;LOWER(Title)&amp;&quot; &quot;,&quot; vp,&quot;),
CONTAINS(&quot; &quot;&amp;LOWER(Title)&amp;&quot; &quot;,&quot; vp.&quot;),
CONTAINS(&quot; &quot;&amp;LOWER(Title)&amp;&quot; &quot;,&quot; svp &quot;),
CONTAINS(&quot; &quot;&amp;LOWER(Title)&amp;&quot; &quot;,&quot; svp,&quot;),
CONTAINS(&quot; &quot;&amp;LOWER(Title)&amp;&quot; &quot;,&quot; svp.&quot;)),&quot;c. Vice President&quot;, 
IF(OR(CONTAINS(LOWER(Title),&quot;director&quot;), 
CONTAINS(&quot; &quot;&amp;LOWER(Title)&amp;&quot; &quot;,&quot; dir &quot;),
CONTAINS(&quot; &quot;&amp;LOWER(Title)&amp;&quot; &quot;,&quot; dir,&quot;),
CONTAINS(&quot; &quot;&amp;LOWER(Title)&amp;&quot; &quot;,&quot; dir.&quot;)),&quot;d. Director&quot;, 
IF(OR(CONTAINS(LOWER(Title),&quot;manager&quot;), 
CONTAINS(LOWER(Title),&quot;mgr&quot;), 
CONTAINS(LOWER(Title),&quot;mngr&quot;)),&quot;e. Manager&quot;, 
IF(CONTAINS(LOWER(Title),&quot;supervisor&quot;),&quot;f. Supervisor&quot;, 
IF(CONTAINS(LOWER(Title),&quot;eng&quot;),&quot;g. Engineer&quot;, 
IF(CONTAINS(LOWER(Title),&quot;admin&quot;),&quot;h. Admin&quot;, 
IF(CONTAINS(LOWER(Title),&quot;architect&quot;),&quot;i. Architect&quot;, 
IF(CONTAINS(LOWER(Title),&quot;analyst&quot;),&quot;j. Analyst&quot;, 
IF(CONTAINS(LOWER(Title),&quot;specialist&quot;),&quot;k. Specialist&quot;,&quot;l. Other/No Match&quot;)))))))))))</formula>
        <label>Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>VMT LinkedIn URL</label>
        <type>Url</type>
    </fields>
</CustomObject>